--- a/build.gradle
+++ b/build.gradle
@@ -17,29 +17,26 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
+    // Testing frameworks
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
-    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'   
-
-    // https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
-    implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'
-
-    // https://mvnrepository.com/artifact/org.testng/testng
     testImplementation 'org.testng:testng:7.8.0'
 
-    // https://mvnrepository.com/artifact/io.cucumber/cucumber-java
+    // Selenium & WebDriver
+    implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'
+
+    // Cucumber (BDD)
     implementation 'io.cucumber:cucumber-java:7.14.1'
-
-    // https://mvnrepository.com/artifact/io.cucumber/cucumber-junit
     testImplementation 'io.cucumber:cucumber-junit:7.14.1'
-
 }
 
 // test {
 //     systemProperty "cucumber.filter.tags", System.getProperty("cucumber.filter.tags")
 // }
+
+test {
+    systemProperty "cucumber.publish.enabled", "false"
+}
 
 tasks.named('test') {
     doFirst {
